<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:id="@+id/cadastro_alim_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_720"
    tools:context=".activitys.cadastro_alim_activity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/button"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="start"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <!-- Campo de data/hora de início -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_sleep"
        android:textColor="@color/text"
        android:layout_marginTop="90dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/campoInicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/date_time_default"
        android:textColor="@color/text"
        android:inputType="datetime"
        android:focusable="false"
        android:clickable="true"
        android:padding="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:importantForAutofill="no"
        android:background="@android:drawable/edit_text" />

    <!-- Campo de data/hora de término -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_sleep"
        android:textColor="@color/text"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/campoFim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/date_time_default"
        android:textColor="@color/text"
        android:inputType="datetime"
        android:focusable="false"
        android:clickable="true"
        android:padding="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="48dp"
        android:importantForAutofill="no"
        android:background="@android:drawable/edit_text" />

    <!-- Botão de salvar -->
    <Button
        android:id="@+id/btnSalvarAlteracoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple"
        android:text="@string/save_changes" />


</LinearLayout>