<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@drawable/background_720">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/botaoMasculino"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:src="@drawable/masculino_icone"
            android:scaleType="fitCenter"
            android:padding="16dp"
            android:contentDescription="@string/male"
            android:background="?attr/selectableItemBackground" />

        <ImageButton
            android:id="@+id/botaoFeminino"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:src="@drawable/feminino_icone"
            android:scaleType="fitCenter"
            android:padding="16dp"
            android:contentDescription="@string/female"
            android:background="?attr/selectableItemBackground" />

    </LinearLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="bottom"
        android:background="@drawable/ripple"
        android:text="@string/next" />

</LinearLayout>
