<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_720"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/today_is"
        android:textColor="@color/text"
        app:layout_constraintBottom_toTopOf="@+id/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="14/05/2025"
        android:textColor="@color/text"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toTopOf="@+id/date" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/baby_age"
        android:textColor="@color/text"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar" />

    <TextView
        android:id="@+id/age_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="1m 14d"
        android:textColor="@color/text"
        app:layout_constraintStart_toEndOf="@+id/age"
        app:layout_constraintTop_toTopOf="@+id/age" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logoff"
        android:background="@drawable/ripple"
        app:layout_constraintBottom_toTopOf="@+id/hrz_ln1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.902" />

    <ImageButton
        android:id="@+id/avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/avatar"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/hrz_ln1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        tools:srcCompat="@tools:sample/avatars" />

    <View
        android:id="@+id/hrz_ln1"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <ImageButton
        android:id="@+id/btn_cadastro_sono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/register_sleep"
        app:layout_constraintBottom_toTopOf="@+id/hrz_ln2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hrz_ln1"
        app:layout_constraintVertical_bias="0.075"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/tv_cadastro_sono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/register_sleep"
        android:textColor="@color/text"
        android:labelFor="@id/btn_cadastro_sono"
        app:layout_constraintEnd_toEndOf="@+id/btn_cadastro_sono"
        app:layout_constraintStart_toStartOf="@+id/btn_cadastro_sono"
        app:layout_constraintTop_toBottomOf="@+id/btn_cadastro_sono" />

    <ImageButton
        android:id="@+id/btn_cadastro_alim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/register_food"
        app:layout_constraintBottom_toTopOf="@+id/hrz_ln2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hrz_ln1"
        app:layout_constraintVertical_bias="0.825"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView_alim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/register_food"
        android:textColor="@color/text"
        android:labelFor="@id/btn_cadastro_alim"
        app:layout_constraintEnd_toEndOf="@+id/btn_cadastro_alim"
        app:layout_constraintStart_toStartOf="@+id/btn_cadastro_alim"
        app:layout_constraintTop_toBottomOf="@+id/btn_cadastro_alim" />

    <View
        android:id="@+id/hrz_ln2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/reports"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hrz_ln2" />

    <Button
        android:id="@+id/btn_relatorio_alim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/food"
        android:background="@drawable/ripple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hrz_ln2"
        app:layout_constraintVertical_bias="0.503" />

    <Button
        android:id="@+id/btn_relatorio_sono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sleep"
        android:background="@drawable/ripple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_relatorio_alim"
        app:layout_constraintTop_toBottomOf="@+id/hrz_ln2"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/nome_bebe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar" />

    <TextView
        android:id="@+id/sexo_bebe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="6dp"
        android:text="sexo"
        android:textColor="@color/text"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toEndOf="@+id/avatar"/>

</androidx.constraintlayout.widget.ConstraintLayout>